# mini-data-platform

./: .env.sample  .gitignore  README.md  main.py  pyproject.toml
src/core/: pipeline.py  writer.py
